overscroll on ios fixed

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ html {
     overflow: hidden;
     width: 100%;
     height: 100%;
+    overscroll-behavior: none;
 }
 
 body {
@@ -36,6 +37,7 @@ body {
     position: relative;
     display: flex;
     flex-direction: column;
+    overscroll-behavior: none;
 }
 
 
